<resources>
    <string name="app_name">My Track</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--Messages-->
    <string name="otp_verfication">OTP verification</string>
    <string name="description">Your OTP is</string>
    <string name="username_null">Please enter the username</string>
    <string name="email_null">Please enter the Email</string>
    <string name="phone_null">Please enter the Mobile No</string>
    <string name="Password_null">Please enter the Password</string>
    <string name="confirm_Password_null">Please enter the Confirm Password</string>
    <string name="min_password">Minimum 6 character required for Password</string>
    <string name="min_confirm_password">Minimum 6 character required for Confirm Password</string>
    <string name="password_mismatch">Confirm Password doesn\'t match Password</string>
    <string name="pls_track_ur_friend">Please track your friends number</string>
    <string name="already_exit_mobileno">Mobile no is already exit</string>
    <string name="mobile_no_not_exit">Mobile number doesn\'t exit</string>
    <string name="user_not_exit">Username doesn\'t exit</string>
    <string name="check_password">Please enter correct Password</string>
    <string name="check_email">Check the Email address</string>
    <string name="check_mobileno">Please Check the Mobile no</string>
    <string name="check_name">Please enter name with minimum 4 letters</string>
    <string name="check_otp">Enter the OTP correctly</string>
    <string name="nouser">User not exit</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="check_ur_internet">Check your Internet Connection</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="please_enable_gps">Please Enable GPS Button and Continue</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="gps_accuracy_not_good">Gps accuracy is not good</string>
    <string name="permission_denied">permission denied</string>
    <string name="location_permission_needed">Location Permission Needed</string>
    <string name="search_for_location">Search for the Location</string>
    <string name="change_traffic_view">Change to Traffic view</string>
    <string name="get_current_location">Get the current location</string>
    <string name="mode_of_transportation">Mode of transportation</string>
    <string name="get_direction_for_ur_route">Get the direction for your route</string>
    <string name="get_ur_friend_location">Get your Friend Location</string>
    <string name="Network_Connection">Network Connection</string>
    <string name="Successfully_signup">Successfully signup in mapbroadcast</string>
    <string name="please_connect_internet">Please Connect to the Internet</string>
    <string name="please_check_gps">Please Check Gps</string>
    <string name="no_data">No Data Found</string>

    <string name="got_it">Got It</string>
    <string name="search_bar">Search Bar</string>
    <string name="traffic_view">Traffic View</string>
    <string name="GPS">GPS</string>
    <string name="mode">Mode</string>
    <string name="direction">Direction</string>
    <string name="find_friend">Find Friend</string>
    <string name="Normal_View">Normal View</string>
    <string name="Satellite_View">Satellite View</string>
    <string name="Hybird_View">Hybird View</string>
    <string name="Terrain_View">Terrain View</string>

    <string name="Search">Search</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="gmail">Gmail</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="email">Email</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Sign_in">Sign In</string>
    <string name="Submit">Submit</string>
    <string name="Update">Update</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="success">Success</string>
    <string name="change_password">Change Password</string>
    <string name="Title">Title</string>
    <string name="message">Message</string>
    <string name="Ok">OK</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="find_userId">Find UserId</string>
    <string name="speed"> Speed</string>
    <string name="distance"> Distance</string>
    <string name="time"> Time</string>
    <string name="default_notification_channel_id">10</string>
    <string name="msg_token_fmt">Message for token</string>
    <string name="Message">Message</string>
    <string name="your_Message">Your Message</string>

    <!--Menu name-->
    <string name="Transport">Transport View</string>
    <string name="Satellite">Satellite View</string>
    <string name="Terrain">Terrain View</string>
    <string name="Hybird">Hybrid View</string>
    <string name="Silver_mode">Silver mode</string>
    <string name="Night_mode">Night mode</string>
    <string name="Travelling_Speed">Travelling Speed</string>
    <string name="Screenshot">Screenshot</string>
    <string name="FindFriends">FindFriends</string>
    <string name="Driving_mode">Driving mode</string>
    <string name="Walking_mode">Walking mode</string>
    <string name="Bicycling_mode">Bicycling mode</string>
    <string name="Add_Friends">Add Friends</string>
    <string name="weather">Weather</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Logout">Logout</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="please_click_again_to_exit">Press again to exit</string>
    <string name="English">English</string>
    <string name="Tamil">தமிழ்</string>
    <string name="please_select_language">Please select any language</string>
    <string name="language">Language</string>
    <string name="Chat">Chat</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_u_want_to_logout">Do you want to logout?</string>
    <string name="logged_out_successfully">Logged out Successfully</string>
    <string name="contacts">Contacts</string>
    <string name="Settings">Settings</string>
    <string name="appwidget_text">My Track</string>
    <string name="add_widget">Add widget</string>

    <!--Weather-->
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="maximum">Maximum</string>
    <string name="minimum">Minimum</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="this_message_removed"> This message has been deleted </string>
    <string name="space">&#160;</string>
    <string name="celsius">\u2103</string>
    <string name="km">km\u002Fh</string>
    <string name="mb">mb</string>
    <string name="percentage">\u0025</string>

    <string name="home">Home</string>
    <string name="updated_successfully">Updated successfully</string>

</resources>