<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/relative"
    android:gravity="center"
    android:alpha="0.95"
    android:paddingHorizontal="@dimen/dp25">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dp10"
        android:visibility="visible"
        app:cardCornerRadius="@dimen/dp5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mytrack.utils.customtext.RegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/AppColor"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/language"
                android:textColor="@color/White"
                android:textSize="@dimen/sp16" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp5">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp5"
                    android:text="@string/English" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/dp5"
                    android:background="@color/HintColor"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp5"
                    android:text="@string/Tamil" />
            </RadioGroup>

            <com.mytrack.utils.customtext.RegularTextView
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/AppColor"
                android:background="@drawable/text_cornor"
                android:gravity="center"
                android:clickable="true"
                android:paddingHorizontal="@dimen/dp15"
                android:paddingVertical="@dimen/dp5"
                android:layout_marginTop="@dimen/dp5"
                android:layout_marginBottom="@dimen/dp10"
                android:text="@string/Ok"
                android:textColor="@color/White" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
