<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_top_radius"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp20">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mytrack.utils.customtext.MediumTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp5"
            android:text="@string/language"
            android:textColor="@color/TextBlack"
            android:textSize="@dimen/sp18"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/btnClose"/>

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="@dimen/dp30"
            android:layout_height="@dimen/dp30"
            android:padding="@dimen/dp3"
            android:layout_marginStart="@dimen/dp5"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"
            android:visibility="visible"/>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:theme="@style/AppTheme">

            <RadioButton
                android:id="@+id/rb_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:checked="true"
                android:fontFamily="@font/rapor_regular"
                android:includeFontPadding="true"
                android:text="@string/English"
                android:textColor="@color/TextBlack"
                android:textSize="@dimen/sp16" />

            <RadioButton
                android:id="@+id/rb_tamil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:fontFamily="@font/rapor_regular"
                android:includeFontPadding="true"
                android:text="@string/Tamil"
                android:textColor="@color/TextBlack"
                android:textSize="@dimen/sp16" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_cornor_stroke"
            android:layout_marginTop="@dimen/dp15"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/dp5"
                android:background="@null"
                android:hint="@string/old_password"
                android:textColorHint="@color/TextMediumGrey"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="@dimen/dp15"
                android:singleLine="true"
                android:textColor="@color/TextBlack"
                android:textSize="@dimen/sp14"
                android:layout_weight="3" />

            <ToggleButton
                android:id="@+id/tbOldPwd"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/sp24"
                android:layout_weight="1"
                android:background="@drawable/ic_password_visible"
                android:gravity="center"
                android:layout_margin="@dimen/dp10"
                android:textOff=""
                android:textOn=""
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_cornor_stroke"
            android:layout_marginTop="@dimen/dp15"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/dp5"
                android:background="@null"
                android:hint="@string/password"
                android:textColorHint="@color/TextMediumGrey"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="@dimen/dp15"
                android:singleLine="true"
                android:textColor="@color/TextBlack"
                android:textSize="@dimen/sp14"
                android:layout_weight="3" />

            <ToggleButton
                android:id="@+id/tbPwd"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/sp24"
                android:layout_weight="1"
                android:background="@drawable/ic_password_visible"
                android:gravity="center"
                android:layout_margin="@dimen/dp10"
                android:textOff=""
                android:textOn=""
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_cornor_stroke"
            android:layout_marginTop="@dimen/dp15"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="@dimen/dp5"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/TextMediumGrey"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="@dimen/dp15"
                android:singleLine="true"
                android:textColor="@color/TextBlack"
                android:textSize="@dimen/sp14"
                android:layout_weight="3" />

            <ToggleButton
                android:id="@+id/tbConfirmPwd"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/sp24"
                android:layout_weight="1"
                android:background="@drawable/ic_password_visible"
                android:gravity="center"
                android:layout_margin="@dimen/dp10"
                android:textOff=""
                android:textOn=""
                android:visibility="visible" />
        </LinearLayout>

        <com.mytrack.utils.customtext.RegularTextView
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/circle_cornor"
            android:backgroundTint="@color/AppColor"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/TextWhite"
            android:textSize="@dimen/sp18" />

    </LinearLayout>
</LinearLayout>
